[package]
name = "rusty_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
rust_socketio = "0.4.2"
serde_json = "1.0"

[[bin]]
name = "rusty_app"
path = "main.rs"

